syntax = "proto3";
package syml;

// SimpleService definition
service SimpleService {
	// snooze sleeps for the supplied number of seconds
	rpc Snooze(SnoozeRequest) returns (Empty) {}

	// CustomCommand checks how custom commands can be passed to the server
	rpc CustomCommand(CommandRequest) returns (CommandResponse) {}
}

// The request message containing the user's name.
message SnoozeRequest {
	string id = 1;
	int64 secs = 2;
}

// Empty request or response
message Empty {
}

// Custom command request
message CommandRequest {
	string id = 1;
	string name = 2;
	bytes parameters = 3;
}

// Custom command response
message CommandResponse {
	string message = 1;
}
